--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					I am a student at
 					<a class = "underline-link" href="https://mksu.ac.ke" target="_blank">
 					Machakos University</a> pursueing a Bachelor's degree in Computer Science.
-				  	Currently I am a 3rd year student.
+				  	Currently I am a 4TH year student.
 			</p>
 
 			<p>
@@ -91,11 +91,11 @@
 						Languages
 					</div>
 					<ul>
-						 <li class="skillz_category_item">RUBY</li>
+						 <li class="skillz_category_item">GIT</li>
 						 <li class="skillz_category_item">JAVASCRIPT</li>
 						 <li class="skillz_category_item">CSS3</li>
 						 <li class="skillz_category_item">HTML5</li>
-						 <li class="skillz_category_item">JSON</li>
+						 <li class="skillz_category_item">FULL STACK WEB DEVELOPMENT</li>
 					</ul>
 				</div>
 
@@ -106,8 +106,8 @@
 					<ul>
 						<li class="skillz_category_item">BOOTSTRAP4</li>
 						<li class="skillz_category_item">API</li>
-						<li class="skillz_category_item">JQUERY</li>
-						<li class="skillz_category_item">FLASK</li>
+						<li class="skillz_category_item">NODE.JS</li>
+						<li class="skillz_category_item">REACT.JS</li>
 
 					</ul>
 				</div>
@@ -122,7 +122,7 @@
 						<li class="skillz_category_item">MYSQL</li>
 						<li class="skillz_category_item">WAMP SERVER</li>
 						<li class="skillz_category_item">XAMP SERVER</li>
-						<li class="skillz_category_item">SQLITE3</li>
+						<li class="skillz_category_item">GOOGLE CLOUD</li>
 					</ul>
 				</div>
 
