--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
 		<div class="section_title">Recent Projects</div>
 			<div class="section_content">
 				<details>
-					<summary> Imaginary flight booking 👇</summary> <br>
+					<check github 👇</summary> <br>
 					<div class="project_name">
-							<a href="https://josephmaina620.github.io/JMFlights/" target="_blank" class="highlight-link"> CLICK ME😍 </a>
+							<a href="https://github.com/Josephmaina620" target="_blank" class="highlight-link"> GITHUB </a>
 					</div>
 				</details>
 			</div>
 	</section>
 
-	<section class="section other-projects">
+	<!--<section class="section other-projects">
 		<div class="section_title">Other Projects</div>
 			<div class="section_content">
 
@@ -170,7 +170,7 @@
 					</div>
 				</details>
 			</div>
-	</section>
+	</section>-->
 
 	<footer class="footer">
 	 	<div class="footer_copyright">
