--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 	<section class="section experience">
 		<div class="section_content">
-			<a href="images/myResume.pdf" target="_blank" class="arrow-link">View My Resume</a>
+			<a href="images/Joseph Maina CV.pdf" target="_blank" class="arrow-link">View My Resume</a>
 		</div>
 	</section>
 
