--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 				<span class="text">
 					Facebook
 				</span>
-				<img src="images/repl.png" alt="facebook">
+				<img src="iconmonstr-facebook-5-240.png" alt="facebook">
 			</a>
 
 
