--- a/index.html
+++ b/index.html
@@ -91,11 +91,10 @@
 						Languages
 					</div>
 					<ul>
-						 <li class="skillz_category_item">GIT</li>
-						 <li class="skillz_category_item">JAVASCRIPT</li>
-						 <li class="skillz_category_item">CSS3</li>
-						 <li class="skillz_category_item">HTML5</li>
-						 <li class="skillz_category_item">FULL STACK WEB DEVELOPMENT</li>
+						 <li class="skillz_category_item">JAVA</li>
+						 <li class="skillz_category_item">PYTHON</li>
+						 <li class="skillz_category_item">C</li>
+						 <li class="skillz_category_item">C++</li>
 					</ul>
 				</div>
 
@@ -105,9 +104,9 @@
 					</div>
 					<ul>
 						<li class="skillz_category_item">BOOTSTRAP4</li>
-						<li class="skillz_category_item">API</li>
 						<li class="skillz_category_item">NODE.JS</li>
 						<li class="skillz_category_item">REACT.JS</li>
+						<li class="skillz_category_item">EJS</li>
 
 					</ul>
 				</div>
@@ -119,10 +118,10 @@
 					<ul>
 						<li class="skillz_category_item">GIT</li>
 						<li class="skillz_category_item">GITHUB</li>
-						<li class="skillz_category_item">MYSQL</li>
-						<li class="skillz_category_item">WAMP SERVER</li>
-						<li class="skillz_category_item">XAMP SERVER</li>
+						<li class="skillz_category_item">SQL</li>
 						<li class="skillz_category_item">GOOGLE CLOUD</li>
+						<li class="skillz_category_item">MongoDB</li>
+
 					</ul>
 				</div>
 
@@ -133,7 +132,6 @@
 					<ul>
 						<li class="skillz_category_item">PHOTOSHOP</li>
 						<li class="skillz_category_item">SKETCH</li>
-						<li class="skillz_category_item">USER TESTING</li>
 					</ul>
 				</div>
 			</div>
