--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 		<div class="section_title">Background</div>
 		<div class="section_content">
 			<p>
-					I am a student at
+					I am an associate of
 					<a class = "underline-link" href="https://mksu.ac.ke" target="_blank">
-					Machakos University</a> pursueing a Bachelor's degree in Computer Science.
-				  	Currently I am a 4TH year student.
+					Machakos University</a> I was pursueing a Bachelor's degree in Computer Science.
+				  	I completed studies on December, 2022, and I'm awaiting graduation.
 			</p>
 
 			<p>
