--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
 							<a href="https://github.com/Josephmaina620" target="_blank" class="highlight-link"> GITHUB </a>
 					</div>
 				</details>
+				<details>
+					<check github 👇</Personal> <br>
+					<div class="project_name">
+							<a href="images/info.bat" target="_blank" class="arrow-link">Computer info bat</a>
+					</div>
+				</details>
 			</div>
 	</section>
 
