--- a/index.html
+++ b/index.html
@@ -154,6 +154,20 @@
 							<a href="https://github.com/Josephmaina620" target="_blank" class="highlight-link"> GITHUB </a>
 					</div>
 				</details>
+				
+			</div>
+	</section>
+
+	<section class="section other-projects">
+		<div class="section_title">Other Projects</div>
+			<div class="section_content">
+
+				<!--<details>
+					<summary>On Progress💻</summary> <br>
+					<div class="project_name">
+							<span>Working on them</span>
+					</div>
+				</details>-->
 				<details>
 					<check github 👇</Personal> <br>
 					<div class="project_name">
@@ -162,19 +176,6 @@
 				</details>
 			</div>
 	</section>
-
-	<!--<section class="section other-projects">
-		<div class="section_title">Other Projects</div>
-			<div class="section_content">
-
-				<details>
-					<summary>On Progress💻</summary> <br>
-					<div class="project_name">
-							<span>Working on them</span>
-					</div>
-				</details>
-			</div>
-	</section>-->
 
 	<footer class="footer">
 	 	<div class="footer_copyright">
